# mmdet3d-ext

./: .gitignore  README.md  model-index.yml  pyproject.toml
.docker/: Dockerfile
src/mmdet3d_ext/: __init__.py  registry.py
src/mmdet3d_ext/datasets/: __init__.py  concat_dataset.py  mono_nuscenes_dataset.py
src/mmdet3d_ext/evaluation/functional/: nusc_eval.py
src/mmdet3d_ext/evaluation/metrics/: nuscenes_metric.py
src/projects/BEVFusion/configs/: bevfusion_lidar_voxel0075_second_secfpn_8xb4-cyclic-20e_nus-3d.py
src/projects/TransFusion/configs/: transfusion_lidar_pillar02_second_secfpn_8xb2-cyclic-20e_nus-3d.py
src/projects/TransFusion/transfusion/: registry.py
src/tools/: create_data.py  create_gt_database.py  mono_nuscenes_converter.py
work_dirs/centerpoint_pillar02_second_secfpn_head-circlenms_8xb4-cyclic-20e_nus-3d/20230923_224851/vis_data/: config.py
