[project]
name = "mmdet3d_ext"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wep21", email = "daisuke.nishimatsu1021@gmail.com" }
]
dependencies = [
    "mmdet3d==1.3.0",
    "openmim==0.3.9",
    "mmengine==0.9.0",
    "torch==2.1.0",
    "mmcv==2.1.0",
    "mmdet==3.2.0",
    "yapf==0.40.1",
    "numpy<1.24",
    "mmyolo>=0.6.0",
    "wandb>=0.15.12",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.291",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.force-include]
"src/tools" = "mmdet3d_ext/.mim/tools"
"model-index.yml" = "mmdet3d_ext/.mim/model-index.yml"

[[tool.rye.sources]]
name = "mmcv"
url = "https://download.openmmlab.com/mmcv/dist/cu121/torch2.1/index.html"
type = "find-links"

[tool.ruff]
line-length = 120
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = [
    'E501',  # ignore line too long and let black handle it
    'E721',  # using type() instead of isinstance() - we use this in tests
    'C901',
]
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
mccabe = { max-complexity = 13 }
isort = { known-first-party = ['mmdet3d_ext'] }
exclude = ['src/projects']

[tool.black]
color = true
line-length = 120
target-version = ['py310']
skip-string-normalization = true
skip-magic-trailing-comma = true
